# mwdg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: simple.c  simple.rs
mwdg/: Cargo.toml  README.md
mwdg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
mwdg-ffi/src/: lib.rs
mwdg-ffi/tests/: basic.rs
mwdg/examples/: simple.rs
mwdg/src/: lib.rs
src/: api.rs  critical.rs  external.rs  lib.rs
tests/: basic.rs
