[package]
name = "mwdg"
version = "0.1.0"
edition = "2024"
description = "Micro-watchdog library for embedded RTOS systems with C FFI"
repository = "https://github.com/vpetrigo/mwdg"
categories = ["no-std", "embedded"]
keywords = ["watchdog", "wdg", "wdt", "watchdog timer"]
license = "MIT OR Apache-2.0"

[features]
pack = []

[build-dependencies]
cbindgen = "~0.29"
