[package]
name = "mwdg"
version = "0.2.0"
edition = "2024"
description = "Micro-watchdog library for embedded RTOS systems with C FFI"
repository = "https://github.com/vpetrigo/mwdg"
categories = ["no-std", "embedded"]
keywords = ["watchdog", "wdg", "wdt", "watchdog-timer", "ffi"]
license = "MIT OR Apache-2.0"

exclude = [
    ".*",
]

[features]
pack = []

[build-dependencies]
cbindgen = "~0.29"
