[package]
name = "mwdg-ffi"
edition = "2024"
description = "C FFI bindings for the mwdg micro-watchdog library"
categories = ["no-std", "embedded"]
keywords = ["watchdog", "wdg", "wdt", "watchdog-timer", "ffi"]

repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

exclude = [
    ".*",
]

[lib]
# The lib crate references extern "C" symbols provided by the user.
# Unit tests would fail to link without those symbols, and all tests
# live in the integration test suite (tests/basic.rs) which provides
# mock implementations.
test = false

[features]
pack = []

[dependencies]
mwdg = { path = "../mwdg" }

[build-dependencies]
cbindgen = "~0.29"
